force-app/main/default/objects/Marca_Cliente__c/Marca_Cliente__c.object-meta.xml
<CustomObject>
    <label>Marca/Cliente</label>
    <nameField>
        <label>Nome de Marca</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marcas/Cliente</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>