force-app/main/default/objects/Marca_Cliente__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marcas/Cliente</relationshipLabel>
    <relationshipName>Marcas_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>