force-app/main/default/objects/Marca_Cliente__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marca</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Marcas/Cliente</relationshipLabel>
    <relationshipName>Marcas_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>